Add hero section with brand image layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasty Meals - Fresh School & Home Meal Delivery</title>
+    <title>Tasty Meals</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,10 +20,16 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container">
-            <h1>Lunchtime just got a whole lot easier (and safer!) 🍱✨</h1>
-            <p class="tagline">Fresh, Hygienic, Delicious Meals Delivered Right to Your Child</p>
-            <a href="#contact" class="cta-button">Get Started Today</a>
+        <div class="hero-overlay"></div>
+        <div class="container hero-content">
+            <div class="hero-text">
+                <h1>Lunchtime just got a whole lot easier and safer! 🍱✨</h1>
+                <p class="tagline">Fresh, Hygienic, Delicious Meals Delivered Right to Your Child</p>
+                <a href="#contact" class="cta-button">Get Started Today</a>
+            </div>
+            <div class="hero-image">
+                <img src="hero-brand.jpg" alt="Tasty Meals Logo" class="brand-hero-img">
+            </div>
         </div>
     </section>
 
@@ -31,7 +37,7 @@
     <section class="mission">
         <div class="container">
             <h2>Our Promise</h2>
-            <p>At Tasty Meals, we believe parents deserve peace of mind and students deserve the best nutrition. Whether your child is at school or home, we deliver fresh, hygienic, and delicious meals right to them.</p>
+            <p>At Tasty Meals, we believe parents deserve peace of mind and school pupils deserve the best nutrition. Whether your child is at school or home, we deliver fresh, hygienic, and delicious meals right to them.</p>
         </div>
     </section>
 
@@ -73,8 +79,8 @@
             <h2>Ready to Join the Tasty Meals Family?</h2>
             <p>DM us to view our weekly menu and get started!</p>
             <div class="contact-links">
-                <a href="https://wa.me/?text=Hi%20Tasty%20Meals!%20I'd%20like%20to%20view%20your%20weekly%20menu" class="contact-btn">WhatsApp</a>
-                <a href="mailto:hello@tastymeals.com" class="contact-btn">Email Us</a>
+                <a href="https://wa.me/+23276450969?text=Hi%20I%20saw%20your%20website%20and%20want%20to%20know%20more" class="contact-btn">WhatsApp</a>
+                <a href="mailto:fsamba423@gmail.com" class="contact-btn">Email Us</a>
                 <a href="https://instagram.com" class="contact-btn">Instagram</a>
             </div>
         </div>
@@ -83,7 +89,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2026 Tasty Meals. All rights reserved. | #TastyMeals #SchoolLunch #HealthyKids #ParentingHacks #FreshFood</p>
+            <p>&copy; 2026 Tasty Meals. All rights reserved. | Freetown, Sierra Leone</p>
         </div>
     </footer>
 </body>
