Changed whatsapp number

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="hero-text">
                 <h1>Lunchtime just got a whole lot easier and safer! 🍱✨</h1>
                 <p class="tagline">Fresh, Hygienic, Delicious Meals Delivered Right to Your Child</p>
-                <a href="#contact" class="cta-button">Get Started Today</a>
+                <a href="#contact" class="cta-button">Get Started</a>
             </div>
             <div class="hero-image">
                 <img src="hero-brand.jpg" alt="Tasty Meals Logo" class="brand-hero-img">
@@ -79,7 +79,7 @@
             <h2>Ready to Join the Tasty Meals Family?</h2>
             <p>DM us to view our weekly menu and get started!</p>
             <div class="contact-links">
-                <a href="https://wa.me/+23276450969?text=Hi%20I%20saw%20your%20website%20and%20want%20to%20know%20more" class="contact-btn">WhatsApp</a>
+                <a href="https://wa.me/+23278594151?text=Hi%20I%20saw%20your%20website%20and%20want%20to%20know%20more" class="contact-btn">WhatsApp</a>
                 <a href="mailto:fsamba423@gmail.com" class="contact-btn">Email Us</a>
                 <a href="https://instagram.com" class="contact-btn">Instagram</a>
             </div>
