Add business logo

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasty Meals</title>
+    <title>Tasty Meals - Fresh School & Home Meal Delivery</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">🍱 Tasty Meals</div>
+            <div class="logo">
+                <img src="logo.png" alt="Tasty Meals Logo" class="logo-img">
+                <span>Tasty Meals</span>
+            </div>
             <ul class="nav-links">
                 <li><a href="#why-us">Why Us</a></li>
                 <li><a href="#contact">Contact</a></li>
